# NeuralNetwork

./: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.ninja  cmake_install.cmake
src/cpp/: main.cpp
src/cpp/file/: reader.h
src/cpp/linear_algebra/: lin_alg.h  matrix.cpp  vector.cpp
src/cpp/neural_network/: activation_funcs.h  batches.cpp  layer.cpp  neural_network.cpp  neural_network.h
